--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,11 +19,4 @@
 
 <pre class="app-state">this.appState.state = {{ appState.state | json }}</pre>
 
-<footer>
-    <span>WebPack Angular 2 Starter by <a [href]="url">@AngularClass</a></span>
-    <div>
-    <a [href]="url">
-        <img [src]="angularclassLogo" width="25%">
-    </a>
-    </div>
-</footer>
+<bottom-nav></bottom-nav>
