--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,3 @@
-<div>
-  <h1 class="sample-content">Your Content Here</h1>
-</div>
+<section class="home-container">
+    <family-person></family-person>
+</section>
