--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,4 @@
 <section class="home-container">
-    <family-person></family-person>
+    <family-person [person]="{ name: 'Anna', role: 'Mother', gender: 'f' }"></family-person>
+    <family-person [person]="{ name: 'Joseph', role: 'Father', gender: 'm' }"></family-person>    
 </section>
