cleanup for family-person component commit

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<nav>
+<!-- <nav>
     <a [routerLink]=" ['./'] "
     routerLinkActive="active" [routerLinkActiveOptions]= "{exact: true}">
     Index
@@ -11,7 +11,7 @@
     routerLinkActive="active" [routerLinkActiveOptions]= "{exact: true}">
     About
     </a>
-</nav>
+</nav> -->
 
 <main>
     <router-outlet></router-outlet>
