--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,3 @@
 <section class="home-container">
-    <family-person [person]="{ name: 'Anna', role: 'Mother', gender: 'f' }"></family-person>
-    <family-person [person]="{ name: 'Joseph', role: 'Father', gender: 'm' }"></family-person>
-    <family-person [person]="{ name: 'Lisa', role: 'Daughter', gender: 'f' }"></family-person>
-    <family-person [person]="{ name: 'Emmy', role: 'Daughter', gender: 'f' }"></family-person>
+    <family-tree></family-tree>
 </section>
