--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2,6 +2,7 @@
 /* This file is for setting global styles  */
 @import 'variables';
 @import '~normalize.css/normalize.css';
+@import '~typicons.font/src/font/typicons.css';
 
 nav {
   margin-top: 16px;
@@ -17,4 +18,8 @@ nav a {
   text-align: center;
   text-decoration: none;
   border-radius: 4px;
+}
+
+i.icon {
+  display: inline-block;
 }
