--- a/src/app/bottom-nav/bottom-nav.component.css
+++ b/src/app/bottom-nav/bottom-nav.component.css
@@ -1,20 +1,31 @@
 /* the bottom navbar */
 .bottom-navigation {
+  box-shadow: 0 -2px 7px 0px rgba(0,0,0,0.05);
   bottom: 0;
   position : fixed;
-  background: green;
   width: 100%;
   display: block;
+  border-top: 1px solid #eeeeee;
 }
 
 .bottom-navigation a {
   text-align: center;
   display: inline-block;
-  color: rebeccapurple;
+  color: #b8b8b8;
   width: 20%;
-  font-size: 1em;
+  font-size: 1.4em;
   margin: 0;
   margin-right: -5px;
-  padding: 1.25em 0;
+  padding: 0.4em 0;
+}
+
+.main-icon {
+  color: white;
+  background: #0099e5;
+  padding: 20px;
+  border-top-right-radius: 50%;
+  border-top-left-radius: 50%;
+  margin-bottom: -10px;
+  border: 2px solid #218dcc;
 }
 
