--- a/src/app/bottom-nav/bottom-nav.component.html
+++ b/src/app/bottom-nav/bottom-nav.component.html
@@ -1,7 +1,17 @@
 <nav class="bottom-navigation">
-    <a href="#home">Home</a>
-    <a href="#news">News</a>
-    <a href="#contact">Contact</a>
-    <a href="#about">About</a>
-    <a href="#about">About</a>
+    <a href="#home">
+        <i class="typcn typcn-user-add"></i>
+    </a>
+    <a href="#news">
+        <i class="typcn typcn-message"></i>
+    </a>
+    <a href="#contact">
+        <i class="main-icon typcn typcn-home"></i>
+    </a>
+    <a href="#about">
+        <i class="typcn typcn-bell"></i>
+    </a>
+    <a href="#about">
+        <i class="typcn typcn-shopping-cart"></i>
+    </a>
 </nav>
